--- a/package.json
+++ b/package.json
@@ -5,39 +5,39 @@
   "dependencies": {
     "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.164",
-    "@types/node": "^12.19.3",
-    "@types/react": "^16.9.55",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^4.3.1",
+    "@types/node": "^12.20.46",
+    "@types/react": "^16.14.23",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-redux": "^7.1.22",
+    "@types/react-router-dom": "^4.3.5",
     "chartist": "^0.11.0",
-    "chartist-plugin-tooltips": "0.0.17",
+    "chartist-plugin-tooltips": "^0.0.17",
     "date-fns": "^1.29.0",
     "fs": "0.0.1-security",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.20",
     "number-abbreviate": "^2.0.0",
-    "pouchdb": "^7.1.1",
+    "pouchdb-browser": "^7.2.2",
     "prop-types": "^15.6.1",
-    "react": "^16.9.0",
+    "react": "^16.14.0",
     "react-chartist": "^0.13.1",
     "react-day-picker": "^7.1.6",
-    "react-dom": "^16.9.0",
-    "react-redux": "^6.0.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
-    "redux": "^4.0.0",
-    "redux-actions": "^2.3.0",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-saga": "^0.16.0",
+    "react-scripts": "^2.1.8",
+    "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^0.16.2",
     "reselect": "^3.0.1",
     "save-file": "^2.3.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1",
+    "semantic-ui-react": "^2.1.2",
     "stats-lite": "^2.2.0",
     "typesafe-actions": "^2.2.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.10"
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.7.0",
